Redesigned a music platform with Google Authentication, global audio player, playlists, catalog system, project cleanup, and Firebase Hosting deployment.